Project Completed for now, Chat Engine API key may not be working

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_API_KEY='AIzaSyB8YhZ2WRCUk-woNMcE92eblZ9drnVhXHU'
 REACT_APP_APP_ID='1:1072220606074:web:19700d7f88cbb2c3ca75c3'
+REACT_APP_CHATENGINE_PROJECT_ID='9b75e0c4-470a-443c-9c47-7f13e506f1a3'
+REACT_APP_CHATENGINE_KEY='5622d212-218f-41af-91a9-287529e00c43'
